// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletTransactionDetails.vue [AddLiquidity, finalized]: should be rendered correctly 1`] = `
<wallet-base-stub
  actionicon=""
  actiontooltip=""
  showback="true"
  title=""
  tooltip=""
>
  <div
    class="transaction"
  >
    <div
      class="s-input-container"
    >
      <s-input-stub
        accept=""
        autocomplete="off"
        borderradius="small"
        form=""
        label=""
        name=""
        placeholder=""
        prefix=""
        readonly="true"
        size="big"
        suffix=""
        tabindex=""
        type="text"
        usedesignsystem="true"
        value="0xB8c77482e4...52C74426C6DD"
      />
       
      <s-button-stub
        alternative="true"
        borderradius="small"
        class="s-button--copy"
        icon="basic-copy-24"
        iconposition="left"
        nativetype="button"
        size="medium"
        tabindex="0"
        tooltip=""
        tooltipplacement="top"
        type="action"
        usedesignsystem="true"
      />
       
      <s-dropdown-stub
        borderradius="mini"
        buttontype="secondary"
        class="s-dropdown-menu"
        hideonclick="true"
        hidetimeout="150"
        icon="basic-more-vertical-24"
        placement="bottom-end"
        showtimeout="250"
        size="medium"
        tabindex="0"
        trigger="hover"
        type="ellipsis"
      >
        <template>
          <a
            class="transaction-link"
            href="https://explorer.s2.dev.sora2.soramitsu.co.jp/sora-dev/block/0xB8c77482e45F1F4d123DeRwQ5F52C74426C6DD"
            rel="nofollow noopener"
            target="_blank"
          >
            <s-dropdown-item-stub
              class="s-dropdown-menu__item"
            >
              
              
            
            </s-dropdown-item-stub>
          </a>
        </template>
      </s-dropdown-stub>
    </div>
     
    <div
      class="info-line-container"
    >
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value=""
      >
        <span
          class="transaction-status"
        >
          
        </span>
         
        <s-icon-stub
          name="basic-check-mark-24"
          size="16px"
        />
      </info-line-stub>
       
      <!---->
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value="27.11.2020, 11:59:59"
      />
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value=""
      >
        <formatted-amount-stub
          assetsymbol="XOR"
          class="info-line-value"
          fontsizerate="medium"
          fontweightrate="small"
          value="0.1"
        >
          <!---->
        </formatted-amount-stub>
      </info-line-stub>
       
      <info-line-stub
        assetsymbol="PSWAP"
        fiatvalue=""
        isformatted="true"
        label=""
        labeltooltip=""
        value="0.9"
      />
    </div>
     
    <div
      class="s-input-container"
    >
      <s-input-stub
        accept=""
        autocomplete="off"
        borderradius="small"
        form=""
        label=""
        name=""
        placeholder=""
        prefix=""
        readonly="true"
        size="big"
        suffix=""
        tabindex=""
        type="text"
        usedesignsystem="true"
        value="5HVmWWpBi69c...pveRnfozNg5K"
      />
       
      <s-button-stub
        alternative="true"
        borderradius="small"
        class="s-button--copy"
        icon="basic-copy-24"
        iconposition="left"
        nativetype="button"
        size="medium"
        tabindex="0"
        tooltip=""
        tooltipplacement="top"
        type="action"
        usedesignsystem="true"
      />
       
      <s-dropdown-stub
        borderradius="mini"
        buttontype="secondary"
        class="s-dropdown-menu"
        hideonclick="true"
        hidetimeout="150"
        icon="basic-more-vertical-24"
        placement="bottom-end"
        showtimeout="250"
        size="medium"
        tabindex="0"
        trigger="hover"
        type="ellipsis"
      >
        <template>
          <a
            class="transaction-link"
            href="https://explorer.s2.dev.sora2.soramitsu.co.jp/sora-dev/account/5HVmWWpBi69cmmDqWE4R6yxxJ2pveRnfozNg5K"
            rel="nofollow noopener"
            target="_blank"
          >
            <s-dropdown-item-stub
              class="s-dropdown-menu__item"
            >
              
              
            
            </s-dropdown-item-stub>
          </a>
        </template>
      </s-dropdown-stub>
    </div>
     
    <!---->
  </div>
</wallet-base-stub>
`;

exports[`WalletTransactionDetails.vue [RegisterAsset, finalized]: should be rendered correctly 1`] = `
<wallet-base-stub
  actionicon=""
  actiontooltip=""
  showback="true"
  title=""
  tooltip=""
>
  <div
    class="transaction"
  >
    <div
      class="s-input-container"
    >
      <s-input-stub
        accept=""
        autocomplete="off"
        borderradius="small"
        form=""
        label=""
        name=""
        placeholder=""
        prefix=""
        readonly="true"
        size="big"
        suffix=""
        tabindex=""
        type="text"
        usedesignsystem="true"
        value="0xB8c77482e4...52C74426C6DD"
      />
       
      <s-button-stub
        alternative="true"
        borderradius="small"
        class="s-button--copy"
        icon="basic-copy-24"
        iconposition="left"
        nativetype="button"
        size="medium"
        tabindex="0"
        tooltip=""
        tooltipplacement="top"
        type="action"
        usedesignsystem="true"
      />
       
      <s-dropdown-stub
        borderradius="mini"
        buttontype="secondary"
        class="s-dropdown-menu"
        hideonclick="true"
        hidetimeout="150"
        icon="basic-more-vertical-24"
        placement="bottom-end"
        showtimeout="250"
        size="medium"
        tabindex="0"
        trigger="hover"
        type="ellipsis"
      >
        <template>
          <a
            class="transaction-link"
            href="https://explorer.s2.dev.sora2.soramitsu.co.jp/sora-dev/block/0xB8c77482e45F1F4d123DeRwQ5F52C74426C6DD"
            rel="nofollow noopener"
            target="_blank"
          >
            <s-dropdown-item-stub
              class="s-dropdown-menu__item"
            >
              
              
            
            </s-dropdown-item-stub>
          </a>
        </template>
      </s-dropdown-stub>
    </div>
     
    <div
      class="info-line-container"
    >
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value=""
      >
        <span
          class="transaction-status"
        >
          
        </span>
         
        <s-icon-stub
          name="basic-check-mark-24"
          size="16px"
        />
      </info-line-stub>
       
      <!---->
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value="27.11.2020, 11:59:59"
      />
       
      <!---->
       
      <!---->
    </div>
     
    <div
      class="s-input-container"
    >
      <s-input-stub
        accept=""
        autocomplete="off"
        borderradius="small"
        form=""
        label=""
        name=""
        placeholder=""
        prefix=""
        readonly="true"
        size="big"
        suffix=""
        tabindex=""
        type="text"
        usedesignsystem="true"
        value="5HVmWWpBi69c...pveRnfozNg5K"
      />
       
      <s-button-stub
        alternative="true"
        borderradius="small"
        class="s-button--copy"
        icon="basic-copy-24"
        iconposition="left"
        nativetype="button"
        size="medium"
        tabindex="0"
        tooltip=""
        tooltipplacement="top"
        type="action"
        usedesignsystem="true"
      />
       
      <s-dropdown-stub
        borderradius="mini"
        buttontype="secondary"
        class="s-dropdown-menu"
        hideonclick="true"
        hidetimeout="150"
        icon="basic-more-vertical-24"
        placement="bottom-end"
        showtimeout="250"
        size="medium"
        tabindex="0"
        trigger="hover"
        type="ellipsis"
      >
        <template>
          <a
            class="transaction-link"
            href="https://explorer.s2.dev.sora2.soramitsu.co.jp/sora-dev/account/5HVmWWpBi69cmmDqWE4R6yxxJ2pveRnfozNg5K"
            rel="nofollow noopener"
            target="_blank"
          >
            <s-dropdown-item-stub
              class="s-dropdown-menu__item"
            >
              
              
            
            </s-dropdown-item-stub>
          </a>
        </template>
      </s-dropdown-stub>
    </div>
     
    <!---->
  </div>
</wallet-base-stub>
`;

exports[`WalletTransactionDetails.vue [RemoveLiquidity, finalized]: should be rendered correctly 1`] = `
<wallet-base-stub
  actionicon=""
  actiontooltip=""
  showback="true"
  title=""
  tooltip=""
>
  <div
    class="transaction"
  >
    <div
      class="s-input-container"
    >
      <s-input-stub
        accept=""
        autocomplete="off"
        borderradius="small"
        form=""
        label=""
        name=""
        placeholder=""
        prefix=""
        readonly="true"
        size="big"
        suffix=""
        tabindex=""
        type="text"
        usedesignsystem="true"
        value="0xB8c77482e4...52C74426C6DD"
      />
       
      <s-button-stub
        alternative="true"
        borderradius="small"
        class="s-button--copy"
        icon="basic-copy-24"
        iconposition="left"
        nativetype="button"
        size="medium"
        tabindex="0"
        tooltip=""
        tooltipplacement="top"
        type="action"
        usedesignsystem="true"
      />
       
      <s-dropdown-stub
        borderradius="mini"
        buttontype="secondary"
        class="s-dropdown-menu"
        hideonclick="true"
        hidetimeout="150"
        icon="basic-more-vertical-24"
        placement="bottom-end"
        showtimeout="250"
        size="medium"
        tabindex="0"
        trigger="hover"
        type="ellipsis"
      >
        <template>
          <a
            class="transaction-link"
            href="https://explorer.s2.dev.sora2.soramitsu.co.jp/sora-dev/block/0xB8c77482e45F1F4d123DeRwQ5F52C74426C6DD"
            rel="nofollow noopener"
            target="_blank"
          >
            <s-dropdown-item-stub
              class="s-dropdown-menu__item"
            >
              
              
            
            </s-dropdown-item-stub>
          </a>
        </template>
      </s-dropdown-stub>
    </div>
     
    <div
      class="info-line-container"
    >
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value=""
      >
        <span
          class="transaction-status"
        >
          
        </span>
         
        <s-icon-stub
          name="basic-check-mark-24"
          size="16px"
        />
      </info-line-stub>
       
      <!---->
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value="27.11.2020, 11:59:59"
      />
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value=""
      >
        <formatted-amount-stub
          assetsymbol="XOR"
          class="info-line-value"
          fontsizerate="medium"
          fontweightrate="small"
          value="100.123"
        >
          <span
            class="formatted-amount__divider"
          >
            
          </span>
           
          <span
            class="formatted-amount__symbol"
          >
            PSWAP
          </span>
        </formatted-amount-stub>
      </info-line-stub>
       
      <!---->
    </div>
     
    <div
      class="s-input-container"
    >
      <s-input-stub
        accept=""
        autocomplete="off"
        borderradius="small"
        form=""
        label=""
        name=""
        placeholder=""
        prefix=""
        readonly="true"
        size="big"
        suffix=""
        tabindex=""
        type="text"
        usedesignsystem="true"
        value="5HVmWWpBi69c...pveRnfozNg5K"
      />
       
      <s-button-stub
        alternative="true"
        borderradius="small"
        class="s-button--copy"
        icon="basic-copy-24"
        iconposition="left"
        nativetype="button"
        size="medium"
        tabindex="0"
        tooltip=""
        tooltipplacement="top"
        type="action"
        usedesignsystem="true"
      />
       
      <s-dropdown-stub
        borderradius="mini"
        buttontype="secondary"
        class="s-dropdown-menu"
        hideonclick="true"
        hidetimeout="150"
        icon="basic-more-vertical-24"
        placement="bottom-end"
        showtimeout="250"
        size="medium"
        tabindex="0"
        trigger="hover"
        type="ellipsis"
      >
        <template>
          <a
            class="transaction-link"
            href="https://explorer.s2.dev.sora2.soramitsu.co.jp/sora-dev/account/5HVmWWpBi69cmmDqWE4R6yxxJ2pveRnfozNg5K"
            rel="nofollow noopener"
            target="_blank"
          >
            <s-dropdown-item-stub
              class="s-dropdown-menu__item"
            >
              
              
            
            </s-dropdown-item-stub>
          </a>
        </template>
      </s-dropdown-stub>
    </div>
     
    <!---->
  </div>
</wallet-base-stub>
`;

exports[`WalletTransactionDetails.vue [Swap, error]: should be rendered correctly 1`] = `
<wallet-base-stub
  actionicon=""
  actiontooltip=""
  showback="true"
  title=""
  tooltip=""
>
  <div
    class="transaction"
  >
    <div
      class="s-input-container"
    >
      <s-input-stub
        accept=""
        autocomplete="off"
        borderradius="small"
        form=""
        label=""
        name=""
        placeholder=""
        prefix=""
        readonly="true"
        size="big"
        suffix=""
        tabindex=""
        type="text"
        usedesignsystem="true"
        value="0xB8c77482e4...52C74426C6DD"
      />
       
      <s-button-stub
        alternative="true"
        borderradius="small"
        class="s-button--copy"
        icon="basic-copy-24"
        iconposition="left"
        nativetype="button"
        size="medium"
        tabindex="0"
        tooltip=""
        tooltipplacement="top"
        type="action"
        usedesignsystem="true"
      />
       
      <s-dropdown-stub
        borderradius="mini"
        buttontype="secondary"
        class="s-dropdown-menu"
        hideonclick="true"
        hidetimeout="150"
        icon="basic-more-vertical-24"
        placement="bottom-end"
        showtimeout="250"
        size="medium"
        tabindex="0"
        trigger="hover"
        type="ellipsis"
      >
        <template>
          <a
            class="transaction-link"
            href="https://explorer.s2.dev.sora2.soramitsu.co.jp/sora-dev/block/0xB8c77482e45F1F4d123DeRwQ5F52C74426C6DD"
            rel="nofollow noopener"
            target="_blank"
          >
            <s-dropdown-item-stub
              class="s-dropdown-menu__item"
            >
              
              
            
            </s-dropdown-item-stub>
          </a>
        </template>
      </s-dropdown-stub>
    </div>
     
    <div
      class="info-line-container"
    >
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value=""
      >
        <span
          class="transaction-status transaction-status--error"
        >
          
        </span>
         
        <!---->
      </info-line-stub>
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value=""
      >
        <span
          class="transaction-status transaction-status--error"
        >
          Test error message!
        </span>
      </info-line-stub>
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value="27.11.2020, 11:59:59"
      />
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value=""
      >
        <formatted-amount-stub
          assetsymbol="XOR"
          class="info-line-value"
          fontsizerate="medium"
          fontweightrate="small"
          value="0.1"
        >
          <!---->
        </formatted-amount-stub>
      </info-line-stub>
       
      <info-line-stub
        assetsymbol="PSWAP"
        fiatvalue=""
        isformatted="true"
        label=""
        labeltooltip=""
        value="0.9"
      />
    </div>
     
    <div
      class="s-input-container"
    >
      <s-input-stub
        accept=""
        autocomplete="off"
        borderradius="small"
        form=""
        label=""
        name=""
        placeholder=""
        prefix=""
        readonly="true"
        size="big"
        suffix=""
        tabindex=""
        type="text"
        usedesignsystem="true"
        value="5HVmWWpBi69c...pveRnfozNg5K"
      />
       
      <s-button-stub
        alternative="true"
        borderradius="small"
        class="s-button--copy"
        icon="basic-copy-24"
        iconposition="left"
        nativetype="button"
        size="medium"
        tabindex="0"
        tooltip=""
        tooltipplacement="top"
        type="action"
        usedesignsystem="true"
      />
       
      <s-dropdown-stub
        borderradius="mini"
        buttontype="secondary"
        class="s-dropdown-menu"
        hideonclick="true"
        hidetimeout="150"
        icon="basic-more-vertical-24"
        placement="bottom-end"
        showtimeout="250"
        size="medium"
        tabindex="0"
        trigger="hover"
        type="ellipsis"
      >
        <template>
          <a
            class="transaction-link"
            href="https://explorer.s2.dev.sora2.soramitsu.co.jp/sora-dev/account/5HVmWWpBi69cmmDqWE4R6yxxJ2pveRnfozNg5K"
            rel="nofollow noopener"
            target="_blank"
          >
            <s-dropdown-item-stub
              class="s-dropdown-menu__item"
            >
              
              
            
            </s-dropdown-item-stub>
          </a>
        </template>
      </s-dropdown-stub>
    </div>
     
    <!---->
  </div>
</wallet-base-stub>
`;

exports[`WalletTransactionDetails.vue [Transfer, finalized]: should be rendered correctly 1`] = `
<wallet-base-stub
  actionicon=""
  actiontooltip=""
  showback="true"
  title=""
  tooltip=""
>
  <div
    class="transaction"
  >
    <div
      class="s-input-container"
    >
      <s-input-stub
        accept=""
        autocomplete="off"
        borderradius="small"
        form=""
        label=""
        name=""
        placeholder=""
        prefix=""
        readonly="true"
        size="big"
        suffix=""
        tabindex=""
        type="text"
        usedesignsystem="true"
        value="0xB8c77482e4...52C74426C6D7"
      />
       
      <s-button-stub
        alternative="true"
        borderradius="small"
        class="s-button--copy"
        icon="basic-copy-24"
        iconposition="left"
        nativetype="button"
        size="medium"
        tabindex="0"
        tooltip=""
        tooltipplacement="top"
        type="action"
        usedesignsystem="true"
      />
       
      <s-dropdown-stub
        borderradius="mini"
        buttontype="secondary"
        class="s-dropdown-menu"
        hideonclick="true"
        hidetimeout="150"
        icon="basic-more-vertical-24"
        placement="bottom-end"
        showtimeout="250"
        size="medium"
        tabindex="0"
        trigger="hover"
        type="ellipsis"
      >
        <template>
          <a
            class="transaction-link"
            href="https://explorer.s2.dev.sora2.soramitsu.co.jp/sora-dev/transaction/0xB8c77482e45F1F4d123DeRwQ5F52C74426C6D7"
            rel="nofollow noopener"
            target="_blank"
          >
            <s-dropdown-item-stub
              class="s-dropdown-menu__item"
            >
              
              
            
            </s-dropdown-item-stub>
          </a>
        </template>
      </s-dropdown-stub>
    </div>
     
    <div
      class="info-line-container"
    >
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value=""
      >
        <span
          class="transaction-status"
        >
          
        </span>
         
        <s-icon-stub
          name="basic-check-mark-24"
          size="16px"
        />
      </info-line-stub>
       
      <!---->
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value="27.11.2020, 11:59:59"
      />
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value=""
      >
        <formatted-amount-stub
          assetsymbol="XOR"
          class="info-line-value"
          fontsizerate="medium"
          fontweightrate="small"
          value="0.1"
        >
          <!---->
        </formatted-amount-stub>
      </info-line-stub>
       
      <!---->
    </div>
     
    <div
      class="s-input-container"
    >
      <s-input-stub
        accept=""
        autocomplete="off"
        borderradius="small"
        form=""
        label=""
        name=""
        placeholder=""
        prefix=""
        readonly="true"
        size="big"
        suffix=""
        tabindex=""
        type="text"
        usedesignsystem="true"
        value="5HVmWWpBi69c...pveRnfozNg5K"
      />
       
      <s-button-stub
        alternative="true"
        borderradius="small"
        class="s-button--copy"
        icon="basic-copy-24"
        iconposition="left"
        nativetype="button"
        size="medium"
        tabindex="0"
        tooltip=""
        tooltipplacement="top"
        type="action"
        usedesignsystem="true"
      />
       
      <s-dropdown-stub
        borderradius="mini"
        buttontype="secondary"
        class="s-dropdown-menu"
        hideonclick="true"
        hidetimeout="150"
        icon="basic-more-vertical-24"
        placement="bottom-end"
        showtimeout="250"
        size="medium"
        tabindex="0"
        trigger="hover"
        type="ellipsis"
      >
        <template>
          <a
            class="transaction-link"
            href="https://explorer.s2.dev.sora2.soramitsu.co.jp/sora-dev/account/5HVmWWpBi69cmmDqWE4R6yxxJ2pveRnfozNg5K"
            rel="nofollow noopener"
            target="_blank"
          >
            <s-dropdown-item-stub
              class="s-dropdown-menu__item"
            >
              
              
            
            </s-dropdown-item-stub>
          </a>
        </template>
      </s-dropdown-stub>
    </div>
     
    <div
      class="s-input-container"
    >
      <s-input-stub
        accept=""
        autocomplete="off"
        borderradius="small"
        form=""
        label=""
        name=""
        placeholder=""
        prefix=""
        readonly="true"
        size="big"
        suffix=""
        tabindex=""
        type="text"
        usedesignsystem="true"
        value="0xB8c77482e4...52C74426C6DD"
      />
       
      <s-button-stub
        alternative="true"
        borderradius="small"
        class="s-button--copy"
        icon="basic-copy-24"
        iconposition="left"
        nativetype="button"
        size="medium"
        tabindex="0"
        tooltip=""
        tooltipplacement="top"
        type="action"
        usedesignsystem="true"
      />
       
      <s-dropdown-stub
        borderradius="mini"
        buttontype="secondary"
        class="s-dropdown-menu"
        hideonclick="true"
        hidetimeout="150"
        icon="basic-more-vertical-24"
        placement="bottom-end"
        showtimeout="250"
        size="medium"
        tabindex="0"
        trigger="hover"
        type="ellipsis"
      >
        <template>
          <a
            class="transaction-link"
            href="https://explorer.s2.dev.sora2.soramitsu.co.jp/sora-dev/account/0xB8c77482e45F1F4d123DeRwQ5F52C74426C6DD"
            rel="nofollow noopener"
            target="_blank"
          >
            <s-dropdown-item-stub
              class="s-dropdown-menu__item"
            >
              
              
            
            </s-dropdown-item-stub>
          </a>
        </template>
      </s-dropdown-stub>
    </div>
  </div>
</wallet-base-stub>
`;
